--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
+    def lifecycle_version = "2.2.0-alpha03"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+
 }
